# skyweaver

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  tests.yml
docs/: gen_api.py  index.md  requirements.txt
docs/guides/: index.md  install.md
docs/notebooks/: skyweaver_example.ipynb  skyweaver_logo.ipynb  skyweaver_tutorial.ipynb
src/skyweaver/: __init__.py  constants.py  observatories.py  orbits.py  timegrid.py  tracks.py
src/skyweaver/viz/: __init__.py  ground.py  sky.py
tests/: test_constants.py  test_init.py  test_observatories.py  test_orbits.py  test_timegrid.py  test_tracks.py  test_viz.py
