[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "skyweaver"
version = "0.1.1"
description = "A Python framework for simulating satellite orbits and how they weave tracks across telescope beams"
keywords = ["satellite", "simulation", "orbit", "radio", "astronomy"]
authors = [{ name = "Aman Chokshi", email = "aman.chokshi@mcgill.ca" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "basemap>=2.0.0",
    "cmasher>=1.9.2",
    "healpy>=1.19.0",
    "matplotlib>=3.10.8",
    "numpy<=2.4",
    "sgp4>=2.25",
    "skyfield>=1.54",
]

[project.urls]
Homepage = "https://github.com/amanchokshi/skyweaver"
Documentation = "https://skyweaver.readthedocs.io"
Repository = "https://github.com/amanchokshi/skyweaver"
Issues = "https://github.com/amanchokshi/skyweaver/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skyweaver"]

[tool.hatch.build.targets.sdist]
include = [
  "src/skyweaver/**",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }

[tool.uv]
package = true


[dependency-groups]
dev = [
    "ipympl>=0.10.0",
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.5",
    "mkdocs-section-index>=0.3.11",
    "mkdocstrings[python]>=1.0.3",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "poethepoet>=0.42.1",
    "pymdown-extensions>=10.21",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "twine>=6.2.0",
]

[tool.poe.tasks]
fmt = "ruff format"
lint = "ruff check --fix"
check = "pyright"
coverage = { cmd = "pytest --cov=skyweaver --cov-report=term-missing"}
all = ["fmt", "lint", "check", "coverage"]

[tool.ruff]
target-version = "py311"
line-length = 128
src = ["src"]

[tool.ruff.lint]
select = [
    "A",  # built-in shadowing
    "E",  # style
    "F",  # pyflakes
    "I",  # import sorting
    "N",  # naming
]

[tool.ruff.lint.isort]
known-first-party = ["skyweaver"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
reportUnknownMemberType = false
reportUnknownVariableType = false
include = ["src"]
exclude = ["tests", "**/__pycache__"]
